# llama.cpp

./: Makefile  llama.cpp
examples/: CMakeLists.txt
examples/moondream/: CMakeLists.txt  README.md  __unused__.cpp  md-cli.cpp  moondream.cpp  vision_encoder.cpp
